# NeuroEV3

./: .gitignore  BaseMotorsWidget.cpp  BaseMotorsWidget.h  CMakeLists.txt  ChangeLog.txt  Common.cpp  Common.h  EV3.cpp  EV3.h  EV3_Motor.cpp  EV3_Motor.h  EV3_command.cpp  MainWindow.cpp  MainWindow.h  MotorsCoeffWidget.cpp  MotorsCoeffWidget.h  MotorsWidget.cpp  MotorsWidget.h  NeuroEV3.pro  README.md  Settings.cpp  Settings.h  ev3.cpp  ev3.h  ev3motor.cpp  ev3motor.h  main.cpp  resources.qrc
classes/: Common.cpp  Common.h  NeuroPlayAppConnector.cpp  NeuroPlayAppConnector.h  Settings.cpp  Settings.h
com/: ComDevice.cpp  ComDevice.h  ComDeviceControl.cpp  ComDeviceControl.h  ComDeviceMentalControl.cpp  ComDeviceMentalControl.h  ComDeviceProportionalControl.cpp  ComDeviceProportionalControl.h  ComDeviceStatusWidget.cpp  ComDeviceStatusWidget.h  ComProfile.cpp  ComProfile.h  ComProfileWidget.cpp  ComProfileWidget.h
com/ui/: ComCommandSelector.cpp  ComCommandSelector.h  ComDeviceBiosignalControl.cpp  ComDeviceBiosignalControl.h  ComDeviceManualControl.cpp  ComDeviceManualControl.h  ComDeviceMultiplayerControl.cpp  ComDeviceMultiplayerControl.h  ComDeviceProportionalControl.cpp  ComDeviceProportionalControl.h  ComDeviceStatusWidget.h  ComProfileWidget.cpp  ComProfileWidget.h  SequencePlayer.cpp  SequencePlayer.h
ev3/: EV3.cpp  EV3.h  EV3_ByteCodes.h  EV3_Command.h  EV3_Motor.cpp  EV3_Motor.h
ev3/ui/: EV3BiosignalStateControl.cpp  EV3BiosignalStateControl.h  EV3ManualControl.cpp  EV3ManualControl.h  EV3MultiplayerControl.cpp  EV3MultiplayerControl.h  EV3ProportionalControl.cpp  EV3ProportionalControl.h  MotorsCoeffWidget.cpp  MotorsWidget.cpp  MotorsWidget.h
resources/: neuroEV3.icns  style.css
resources/translations/: NeuroEV3_en-US.qm  NeuroEV3_en-US.ts  NeuroEV3_ru-RU.qm  NeuroEV3_ru-RU.ts
scripts/Arduino_Example/: Arduino_Example.ino
scripts/Studuino_ArtecCommands/: Studuino_ArtecCommands.ino
ui/: BiosignalStateCircle.cpp  BiosignalStateCircle.h  DeviceBiosignalStateControl.cpp  DeviceBiosignalStateControl.h  DeviceMultiplayerControl.cpp  DeviceMultiplayerControl.h  DeviceProportionalControl.cpp  DeviceProportionalControl.h  GroupBox.cpp  GroupBox.h  IconLabel.cpp  IconLabel.h  ImpovedSlider.cpp  ImpovedSlider.h  LabelWithIcon.cpp  LabelWithIcon.h  MainWindow.cpp  MainWindow.h  MotorsCoeffWidget.cpp  MotorsCoeffWidget.h  MotorsWidget.cpp  MotorsWidget.h  UICommon.cpp  UICommon.h  nscrollviewer.cpp  nscrollviewer.h  nstackpanel.cpp  nstackpanel.h
